# codewars-cli

./: Makefile  README.md  pyproject.toml
.github/: CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
codewars_cli/: __init__.py  __main__.py  attempt.py  helpers.py  practice.py  submit.py  test.py  train.py
