[tool.poetry]
name = "codewars-cli"
version = "0.1.2"
description = "An unofficial CLI for CodeWars."
license = "MIT"
authors = ["Kappa <f.cappetti.05@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kappq/codewars-cli"
keywords = ["cli"]
classifiers = ["Operating System :: OS Independent"]
packages = [{include = "codewars_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
click = "^8.1.3"
cloudscraper = "^1.2.66"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"

[tool.poetry.scripts]
codewars_cli = "codewars_cli.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
